@@ -1,4 +1,4 @@
-@set UPDATED 26 February 2004
-@set UPDATED-MONTH February 2004
+@set UPDATED 12 June 2004
+@set UPDATED-MONTH June 2004
 @set EDITION 1.71
 @set VERSION 1.71
